test/errors/e01.gm
Procedure foo(G: Graph)
{
  X = 1;
}
